Add isolated Jor VK and OK leaderboard support
